--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
   name: AppZ IDE
   code: APPZIDE
-  notify: appzdev@cloudbourne.co
+  notify: nikhilsoman23@gmail.com
 
 build:
   version: 0.2
@@ -12,7 +12,7 @@ build:
 
 deploy:
   type: statefulset
-  context: alpha/DEV
+  context: nikhil-soman/DEV
   replicas: 1
   port:
   - 80
@@ -25,5 +25,5 @@ volumes:
   size: 5Gi 
 
 properties:
-  IDE_PASSWORD_HASH: "appz:$2y$10$UlYiRlcQw4Doscdodv3vruSeGc/YfKH/tc1F1/HOgPeTMUMsg84Bm"
+  IDE_PASSWORD_HASH: "appz:f1af9786-4732-4e6a-8494-50b21e19e5ca:$2y$10$BhQQRES65x8tayGslhbSx.L4./lG1MWB8R06wKve3Xc0EoV/sKPiy"
   revision : 15
